--- a/styleguide/scss/core/_core-color.scss
+++ b/styleguide/scss/core/_core-color.scss
@@ -20,7 +20,7 @@
 //
 // This lookup table is needed since there is no `pow` in SASS.
 //
-$linear-channel-values:
+$sf-linear-channel-values:
     0
     .0003035269835488375
     .000607053967097675
@@ -281,11 +281,11 @@ $linear-channel-values:
 // Calculate the luminance for a color.
 // See https://www.w3.org/TR/WCAG20-TECHS/G17.html#G17-tests
 //
-@function luminance($color) {
+@function sf-luminance($color) {
 
-    $red: nth($linear-channel-values, red($color) + 1);
-    $green: nth($linear-channel-values, green($color) + 1);
-    $blue: nth($linear-channel-values, blue($color) + 1);
+    $red: nth($sf-linear-channel-values, red($color) + 1);
+    $green: nth($sf-linear-channel-values, green($color) + 1);
+    $blue: nth($sf-linear-channel-values, blue($color) + 1);
 
     @return .2126 * $red + .7152 * $green + .0722 * $blue;
 }
@@ -293,10 +293,10 @@ $linear-channel-values:
 // Calculate the contrast ratio between two colors.
 // See https://www.w3.org/TR/WCAG20-TECHS/G17.html#G17-tests
 //
-@function contrast($back, $front) {
+@function sf-contrast($back, $front) {
 
-    $backLum: luminance($back) + .05;
-    $foreLum: luminance($front) + .05;
+    $backLum: sf-luminance($back) + .05;
+    $foreLum: sf-luminance($front) + .05;
 
     @return max($backLum, $foreLum) / min($backLum, $foreLum);
 }
@@ -306,10 +306,10 @@ $linear-channel-values:
 // Optionally pass in colors to use for light and dark foregrounds;
 // defaults to black and white.
 //
-@function generate-contrast-color($color, $light: #ffffff, $dark: #000000) {
+@function sf-generate-contrast-color($color, $light: #ffffff, $dark: #000000) {
 
-    $lightContrast: contrast($color, $light);
-    $darkContrast: contrast($color, $dark);
+    $lightContrast: sf-contrast($color, $light);
+    $darkContrast: sf-contrast($color, $dark);
 
     @if ($lightContrast > $darkContrast) {
         @return $light;
@@ -318,4 +318,3 @@ $linear-channel-values:
         @return $dark;
     }
 }
-
