--- a/styleguide/scss/custom/_grids.scss
+++ b/styleguide/scss/custom/_grids.scss
@@ -160,7 +160,7 @@ body {
                         > div {
 
                             padding: 1.0008rem;
-                            color: sf-get-color(white);
+                            color: white;
 
                             @include sf-media($from: tablet-portrait) {
 
@@ -180,7 +180,7 @@ body {
         
                             h3 {
                                 
-                                color: sf-get-color(white);
+                                color: white;
                                 font-size: 1.5568rem;
                                 line-height: 1.5568rem;
 
