--- a/styleguide/scss/custom/_layout-header.scss
+++ b/styleguide/scss/custom/_layout-header.scss
@@ -67,7 +67,7 @@ body {
 
                         a {
 
-                            color: sf-get-color(slate);
+                            color: var(--sf-color-dark);
                             text-decoration: none;
                         }
                     }
@@ -88,7 +88,7 @@ body {
                     h3, h4 {
 
                         margin-top: 0;
-                        color: sf-get-color(slate);
+                        color: var(--sf-color-dark);
                     }
 
                     h3 {
@@ -107,12 +107,12 @@ body {
         &:not(#logo) {
 
             padding: 1rem;
-            background-color: sf-get-color(graylightest);
-            border: solid $mobile-lw-1px sf-get-color(graylight);
+            background-color: var(--sf-color-light);
+            border: solid $mobile-lw-1px var(--sf-color-medium);
 
             @include sf-media($from: tablet-portrait) {
 
-                border: solid $lw-1px sf-get-color(graylight);
+                border: solid $lw-1px var(--sf-color-medium);
             }
 
             [role="grid"] {
