--- a/styleguide/scss/_config-colors.scss
+++ b/styleguide/scss/_config-colors.scss
@@ -9,79 +9,79 @@
 :root {
 
     // PRIMARY
-    $color: #3880ff;
-    --sf-color-primary: #{rgba($color, 1.0)};
+    $hex-color: #3880ff;
+    --sf-color-primary: #{rgba($hex-color, 1.0)};
     --sf-color-primary-contrast: #{rgba(#ffffff, 1.0)};
-    --sf-color-primary-shade: #{rgba(scale-color(darken($color, 15%), $lightness: -15%), 1.0)};
-    --sf-color-primary-tint: #{rgba(scale-color(lighten($color, 20%), $lightness: 20%), 1.0)};
+    --sf-color-primary-shade: #{rgba(scale-color(darken($hex-color, 15%), $lightness: -15%), 1.0)};
+    --sf-color-primary-tint: #{rgba(scale-color(lighten($hex-color, 20%), $lightness: 20%), 1.0)};
 
     // SECONDARY
-    $color: #0cd1e8;
-    --sf-color-secondary: #{rgba($color, 1.0)};
+    $hex-color: #0cd1e8;
+    --sf-color-secondary: #{rgba($hex-color, 1.0)};
     --sf-color-secondary-contrast: #{rgba(#ffffff, 1.0)};
-    --sf-color-secondary-shade: #{rgba(scale-color(darken($color, 15%), $lightness: -15%), 1.0)};
-    --sf-color-secondary-tint: #{rgba(scale-color(lighten($color, 20%), $lightness: 20%), 1.0)};
+    --sf-color-secondary-shade: #{rgba(scale-color(darken($hex-color, 15%), $lightness: -15%), 1.0)};
+    --sf-color-secondary-tint: #{rgba(scale-color(lighten($hex-color, 20%), $lightness: 20%), 1.0)};
 
     // TERTIARY
-    $color: #7044ff;
-    --sf-color-tertiary: #{rgba($color, 1.0)};
+    $hex-color: #7044ff;
+    --sf-color-tertiary: #{rgba($hex-color, 1.0)};
     --sf-color-tertiary-contrast: #{rgba(#ffffff, 1.0)};
-    --sf-color-tertiary-shade: #{rgba(scale-color(darken($color, 15%), $lightness: -15%), 1.0)};
-    --sf-color-tertiary-tint: #{rgba(scale-color(lighten($color, 20%), $lightness: 20%), 1.0)};
+    --sf-color-tertiary-shade: #{rgba(scale-color(darken($hex-color, 15%), $lightness: -15%), 1.0)};
+    --sf-color-tertiary-tint: #{rgba(scale-color(lighten($hex-color, 20%), $lightness: 20%), 1.0)};
 
     // BUTTONS
-    $color: #30bc45;
-    --sf-color-buttons: #{rgba($color, 1.0)};
+    $hex-color: #30bc45;
+    --sf-color-buttons: #{rgba($hex-color, 1.0)};
     --sf-color-buttons-contrast: #{rgba(#ffffff, 1.0)};
-    --sf-color-buttons-shade: #{rgba(scale-color(darken($color, 15%), $lightness: -15%), 1.0)};
-    --sf-color-buttons-tint: #{rgba(scale-color(lighten($color, 20%), $lightness: 20%), 1.0)};
+    --sf-color-buttons-shade: #{rgba(scale-color(darken($hex-color, 15%), $lightness: -15%), 1.0)};
+    --sf-color-buttons-tint: #{rgba(scale-color(lighten($hex-color, 20%), $lightness: 20%), 1.0)};
 
     // SUCCESS
-    $color: #30bc45;
-    --sf-color-success: #{rgba($color, 1.0)};
+    $hex-color: #30bc45;
+    --sf-color-success: #{rgba($hex-color, 1.0)};
     --sf-color-success-contrast: #{rgba(#ffffff, 1.0)};
-    --sf-color-success-shade: #{rgba(scale-color(darken($color, 15%), $lightness: -15%), 1.0)};
-    --sf-color-success-tint: #{rgba(scale-color(lighten($color, 20%), $lightness: 20%), 1.0)};
+    --sf-color-success-shade: #{rgba(scale-color(darken($hex-color, 15%), $lightness: -15%), 1.0)};
+    --sf-color-success-tint: #{rgba(scale-color(lighten($hex-color, 20%), $lightness: 20%), 1.0)};
 
     // WARNING
-    $color: #ffce00;
-    --sf-color-warning: #{rgba($color, 1.0)};
+    $hex-color: #ffce00;
+    --sf-color-warning: #{rgba($hex-color, 1.0)};
     --sf-color-warning-contrast: #{rgba(#ffffff, 1.0)};
-    --sf-color-warning-shade: #{rgba(scale-color(darken($color, 15%), $lightness: -15%), 1.0)};
-    --sf-color-warning-tint: #{rgba(scale-color(lighten($color, 20%), $lightness: 20%), 1.0)};
+    --sf-color-warning-shade: #{rgba(scale-color(darken($hex-color, 15%), $lightness: -15%), 1.0)};
+    --sf-color-warning-tint: #{rgba(scale-color(lighten($hex-color, 20%), $lightness: 20%), 1.0)};
 
     // DANGER
-    $color: #f04141;
-    --sf-color-danger: #{rgba($color, 1.0)};
+    $hex-color: #f04141;
+    --sf-color-danger: #{rgba($hex-color, 1.0)};
     --sf-color-danger-contrast: #{rgba(#ffffff, 1.0)};
-    --sf-color-danger-shade: #{rgba(scale-color(darken($color, 15%), $lightness: -15%), 1.0)};
-    --sf-color-danger-tint: #{rgba(scale-color(lighten($color, 20%), $lightness: 20%), 1.0)};
+    --sf-color-danger-shade: #{rgba(scale-color(darken($hex-color, 15%), $lightness: -15%), 1.0)};
+    --sf-color-danger-tint: #{rgba(scale-color(lighten($hex-color, 20%), $lightness: 20%), 1.0)};
 
     // LIGHT
-    $color: #f4f5f8;
-    --sf-color-light: #{rgba($color, 1.0)};
+    $hex-color: #f4f5f8;
+    --sf-color-light: #{rgba($hex-color, 1.0)};
     --sf-color-light-contrast: #{rgba(#000000, 1.0)};
-    --sf-color-light-shade: #{rgba(scale-color(darken($color, 15%), $lightness: -15%), 1.0)};
-    --sf-color-light-tint: #{rgba(scale-color(lighten($color, 20%), $lightness: 20%), 1.0)};
+    --sf-color-light-shade: #{rgba(scale-color(darken($hex-color, 15%), $lightness: -15%), 1.0)};
+    --sf-color-light-tint: #{rgba(scale-color(lighten($hex-color, 20%), $lightness: 20%), 1.0)};
 
     // MEDIUM
-    $color: #989aa2;
-    --sf-color-medium: #{rgba($color, 1.0)};
+    $hex-color: #989aa2;
+    --sf-color-medium: #{rgba($hex-color, 1.0)};
     --sf-color-medium-contrast: #{rgba(#ffffff, 1.0)};
-    --sf-color-medium-shade: #{rgba(scale-color(darken($color, 15%), $lightness: -15%), 1.0)};
-    --sf-color-medium-tint: #{rgba(scale-color(lighten($color, 20%), $lightness: 20%), 1.0)};
+    --sf-color-medium-shade: #{rgba(scale-color(darken($hex-color, 15%), $lightness: -15%), 1.0)};
+    --sf-color-medium-tint: #{rgba(scale-color(lighten($hex-color, 20%), $lightness: 20%), 1.0)};
 
     // DARK
-    $color: #222428;
-    --sf-color-dark: #{rgba($color, 1.0)};
+    $hex-color: #222428;
+    --sf-color-dark: #{rgba($hex-color, 1.0)};
     --sf-color-dark-contrast: #{rgba(#ffffff, 1.0)};
-    --sf-color-dark-shade: #{rgba(scale-color(darken($color, 15%), $lightness: -15%), 1.0)};
-    --sf-color-dark-tint: #{rgba(scale-color(lighten($color, 20%), $lightness: 20%), 1.0)};
+    --sf-color-dark-shade: #{rgba(scale-color(darken($hex-color, 15%), $lightness: -15%), 1.0)};
+    --sf-color-dark-tint: #{rgba(scale-color(lighten($hex-color, 20%), $lightness: 20%), 1.0)};
 
-    // REQUIRED: Form fields color assignments
+    // Form field color assignments
     --disabled-field-bg-color: var(--sf-color-light);
-
-    // REQUIRED: Default line color
-    --sf-color-line: rgba(0, 0, 0, 0.15);
     --sf-color-form-field-line: rgba(0, 0, 0, 0.15);
+
+    // General line color
+    --sf-color-line: rgba(0, 0, 0, 0.15);
 }
