--- a/styleguide/scss/core/_core-layout.scss
+++ b/styleguide/scss/core/_core-layout.scss
@@ -9,363 +9,158 @@
 
 // BOUNDS CHECKING...
 
-@if ($support-all-browsers) {
-
-    @if ($highest-gutter-percentage < 0 or $highest-gutter-percentage > 100) {
-
-        $highest-gutter-percentage: 25;
-    }
-
-    @if ($gutter-percentage-increment < 0 or $gutter-percentage-increment > 1) {
-
-        $gutter-percentage-increment: 1;
-    }
-
-    @if ($highest-gutter-rem < 0 or $highest-gutter-rem > 100) {
-
-        $highest-gutter-rem: 25;
-    }
-
-    @if ($gutter-rem-increment < 0 or $gutter-rem-increment > 1) {
-
-        $gutter-rem-increment: 1;
-    }
-
-    @if ($highest-row-gutter-rem < 0 or $highest-row-gutter-rem > 100) {
-
-        $highest-row-gutter-rem: 25;
-    }
-
-    @if ($row-gutter-rem-increment < 0 or $row-gutter-rem-increment > 1) {
-
-        $row-gutter-rem-increment: 1;
-    }
-}
-
 @mixin sf-grid-init($prefix: false, $breakpoint: zero) {
 
     @if ($prefix != false) {
 
         margin: 0;
 
-        @if ($support-all-browsers) {
+        // CSS CUSTOM PROPERTIES
 
-            // HANDLE GUTTER PERCENTAGES
+        // GUTTERS
+        // style="--sf-gutters: 5%;"
+        // style="--sf-tabp-gutters: 5%;"
+        &[style~="--#{$prefix}gutters:"] {
 
-            @if ($highest-gutter-percentage > 0) {
+            margin-left: calc((var(--#{$prefix}gutters)/2) * -1);
+            margin-right: calc((var(--#{$prefix}gutters)/2) * -1);
 
-                @for $i from 0 through $highest-gutter-percentage {
-
-                    $f: 0;
-
-                    @while $f < 1 {
-
-                        &[#{$prefix}gutters="#{$i + $f}%"] {
-                            @include sf-set-gutters (
-                                $gutter: sf-to-length($i + $f, "%")
-                            );
-                        }
-
-                        $f: $f + $gutter-percentage-increment;
-                    }
-                }
-            }
-
-            // HANDLE GUTTER REMS
-
-            @if ($highest-gutter-rem > 0) {
-
-                @for $i from 0 through $highest-gutter-rem {
-
-                    $f: 0;
-
-                    @while $f < 1 {
-
-                        &[#{$prefix}gutters="#{$i + $f}rem"] {
-                            @include sf-set-gutters (
-                                $gutter: sf-to-length($i + $f, "rem")
-                            );
-                        }
-
-                        $f: $f + $gutter-rem-increment;
-                    }
-                }
-            }
-            
-            // HANDLE ROW-GUTTER REMS
-
-            @if ($highest-row-gutter-rem > 0) {
-
-                @for $i from 0 through $highest-row-gutter-rem {
-
-                    $f: 0;
-
-                    @while $f < 1 {
-
-                        &[#{$prefix}row-gutters="#{$i + $f}rem"] {
-                            @include sf-set-gutters (
-                                $row-gutter: sf-to-length($i + $f, "rem")
-                            );
-                        }
-
-                        $f: $f + $row-gutter-rem-increment;
-                    }
-                }
-            }
-
-            // HANDLE IMPLICIT CELL WIDTHS
-
-            @if ($base-column-count > 0) {
-
-                @for $i from 1 through $base-column-count {
-
-                    &[#{$prefix}cols="#{$i}"] {
-        
-                        & > [role="gridcell"] {
-
-                            @include sf-set-width (
-                                $width: 100/$i + unquote("%")
-                            );
-                        }
-                    }
-                }
-            }
-
-            // REVERSE
-
-            &[#{$prefix}flex-direction="row"] {
-
-                flex-direction: row;
-            }
-
-            &[#{$prefix}flex-direction="row-reverse"] {
-
-                flex-direction: row-reverse;
-            }
-
-            &[#{$prefix}flex-direction="column"] {
-
-                flex-direction: column;
-            }
-
-            &[#{$prefix}flex-direction="column-reverse"] {
-
-                flex-direction: column-reverse;
-            }
-
-            // EQUAL HEIGHT CELLS PER ROW
-
-            &[#{$prefix}equal-heights] {
-
-                @include sf-make-equal-heights();
-            }
-
-            // VERTICALLY CENTERED GRID CELL CONTENT
-
-            &[#{$prefix}centered] {
-    
-                @include sf-make-centered-grid();
-            }
-
-            // HANDLE EXPLICIT CELL WIDTHS
-
-            &, & > [role="gridcell"] {
-
-                @if ($base-column-count > 0) {
-
-                    // 12-COLUMN WIDTH
-                    @for $i from 0 through $base-column-count {
-
-                        &[#{$prefix}col="#{$i}"] {
-                            @include sf-set-width (
-                                $width: $i/$base-column-count * 100%
-                            );
-                        }
-
-                        &[#{$prefix}push-col="#{$i}"] {
-                            @include sf-push (
-                                $width: $i/$base-column-count * 100%
-                            );
-                        }
-
-                        &[#{$prefix}pull-col="#{$i}"] {
-                            @include sf-pull (
-                                $width: $i/$base-column-count * 100%
-                            );
-                        }
-                    }
-                }
-
-                // AUTO WIDTH CELLS
-
-                &[#{$prefix}width-auto],
-                &[#{$prefix}width-auto="1"],
-                &[#{$prefix}width-auto="true"] {
-
-                    width: auto;
-                    flex-grow: 1;
-                }
-
-                // AUTO WIDTH CELLS
-
-                &[#{$prefix}width-auto="0"],
-                &[#{$prefix}width-auto="false"] {
-
-                    flex-grow: 0;
-                }
+            & > [role="gridcell"] {
+                
+                padding-left: calc(var(--#{$prefix}gutters)/2);
+                padding-right: calc(var(--#{$prefix}gutters)/2);
             }
         }
 
-        @if ($support-newest-browsers) {
+        // ROW GUTTERS
+        // style="--sf-row-gutters: 1.5rem;"
+        // style="--sf-tabp-row-gutters: 1.5rem;"
+        &[style~="--#{$prefix}row-gutters:"] {
 
-            // CSS CUSTOM PROPERTIES
-            // Experimental support for CSS variables in style attributes.
+            margin-top: calc((var(--#{$prefix}row-gutters)/2) * -1);
+            margin-bottom: calc((var(--#{$prefix}row-gutters)/2) * -1);
 
-            // GUTTERS
-            // style="--sf-gutters: 5%;"
-            // style="--sf-tabp-gutters: 5%;"
-            &[style~="--#{$prefix}gutters:"] {
+            [role="grid"][sf-row-gutters] + &,
+            [role="grid"][style~="--#{$prefix}row-gutters:"] + & {
 
-                margin-left: calc((var(--#{$prefix}gutters)/2) * -1);
-                margin-right: calc((var(--#{$prefix}gutters)/2) * -1);
-
-                & > [role="gridcell"] {
-                    
-                    padding-left: calc(var(--#{$prefix}gutters)/2);
-                    padding-right: calc(var(--#{$prefix}gutters)/2);
-                }
+                margin-top: calc(var(--#{$prefix}row-gutters) * -1);
             }
 
-            // ROW GUTTERS
-            // style="--sf-row-gutters: 1.5rem;"
-            // style="--sf-tabp-row-gutters: 1.5rem;"
-            &[style~="--#{$prefix}row-gutters:"] {
-
-                margin-top: calc((var(--#{$prefix}row-gutters)/2) * -1);
-                margin-bottom: calc((var(--#{$prefix}row-gutters)/2) * -1);
-
-                [role="grid"][sf-row-gutters] + &,
-                [role="grid"][style~="--#{$prefix}row-gutters:"] + & {
-
-                    margin-top: calc(var(--#{$prefix}row-gutters) * -1);
-                }
-
-                & > [role="gridcell"] {
-                    
-                    padding-top: calc(var(--#{$prefix}row-gutters)/2);
-                    padding-bottom: calc(var(--#{$prefix}row-gutters)/2);
-                }
-            }
-
-            // IMPLICIT COLUMN WIDTHS BASED ON COLUMN COUNT
-            // style="--sf-cols: 3;"
-            // style="--sf-tabp-cols: 3;"
-            &[style~="--#{$prefix}cols:"] {
-
-                & > [role="gridcell"] {
-                    
-                    width: calc(100% / var(--#{$prefix}cols));
-                }
-            }
-
-            // REVERSE
-            // style="--sf-flex-direction: column-reverse;"
-            // style="--sf-flex-direction: row;"
-            &[style~="--#{$prefix}flex-direction:"] {
-
-                flex-direction: var(--#{$prefix}flex-direction);
-            }
-
-            // EQUAL HEIGHT CELLS PER ROW
-            // style="--sf-equal-heights: true;"
-            // style="--sf-tabp-equal-heights: true;"
-            &[style~="--#{$prefix}equal-heights:"] {
-
-                @include sf-make-equal-heights();
-            }
-
-            // VERTICALLY CENTERED GRID CELL CONTENT
-            // style="--sf-centered: true;"
-            // style="--sf-tabp-centered: true;"
-            &[style~="--#{$prefix}centered:"] {
-
-                @include sf-make-centered-grid();
-            }
-
-            // EXPLICIT GRID AND CELL WIDTHS
-            // style="--sf-width: 30%;"
-            // style="--sf-tabp-width: 30%;"
-            &[style~="--#{$prefix}width:"],
-            & > [role="gridcell"][style~="--#{$prefix}width:"] {
+            & > [role="gridcell"] {
                 
-                width: var(--#{$prefix}width);
-                flex-grow: 0;
+                padding-top: calc(var(--#{$prefix}row-gutters)/2);
+                padding-bottom: calc(var(--#{$prefix}row-gutters)/2);
             }
+        }
 
-            // EXPLICIT GRID AND CELL WIDTHS (FRACTIONS)
-            // style="--sf-frac: 3/12;"
-            // style="--sf-tabp-frac: 7/12;"
-            &[style~="--#{$prefix}frac:"],
-            & > [role="gridcell"][style~="--#{$prefix}frac:"] {
+        // IMPLICIT COLUMN WIDTHS BASED ON COLUMN COUNT
+        // style="--sf-cols: 3;"
+        // style="--sf-tabp-cols: 3;"
+        &[style~="--#{$prefix}cols:"] {
+
+            & > [role="gridcell"] {
                 
-                width: calc((var(--#{$prefix}frac)) * 100%);
-                flex-grow: 0;
+                width: calc(100% / var(--#{$prefix}cols));
             }
+        }
 
-            // CELL PUSH
-            // style="--sf-push: 30%;"
-            // style="--sf-tabp-push: 30%;"
-            & > [role="gridcell"][style~="--#{$prefix}push:"] {
-                
-                left: var(--#{$prefix}push);
-            }
+        // REVERSE
+        // style="--sf-flex-direction: column-reverse;"
+        // style="--sf-flex-direction: row;"
+        &[style~="--#{$prefix}flex-direction:"] {
 
-            // CELL PUSH (FRACTIONS)
-            // style="--sf-push-frac: 2/12;"
-            // style="--sf-tabp-push-frac: 2/12;"
-            & > [role="gridcell"][style~="--#{$prefix}push-frac:"] {
-                
-                left: calc((var(--#{$prefix}push-frac)) * 100%);
-            }
+            flex-direction: var(--#{$prefix}flex-direction);
+        }
 
-            // CELL PULL
-            // style="--sf-pull: 30%;"
-            // style="--sf-tabp-pull: 30%;"
-            & > [role="gridcell"][style~="--#{$prefix}pull:"] {
-                
-                right: var(--#{$prefix}pull);
-            }
+        // EQUAL HEIGHT CELLS PER ROW
+        // style="--sf-equal-heights: true;"
+        // style="--sf-tabp-equal-heights: true;"
+        &[style~="--#{$prefix}equal-heights:"] {
 
-            // CELL PULL (FRACTIONS)
-            // style="--sf-pull-frac: 2/12;"
-            // style="--sf-tabp-pull-frac: 2/12;"
-            & > [role="gridcell"][style~="--#{$prefix}pull-frac:"] {
-                
-                right: calc((var(--#{$prefix}pull-frac)) * 100%);
-            }
+            @include sf-make-equal-heights();
+        }
 
-            // AUTO WIDTH CELLS
+        // VERTICALLY CENTERED GRID CELL CONTENT
+        // style="--sf-centered: true;"
+        // style="--sf-tabp-centered: true;"
+        &[style~="--#{$prefix}centered:"] {
 
-            &[#{$prefix}width-auto],
-            & > [role="gridcell"][#{$prefix}width-auto],
-            &[#{$prefix}width-auto="1"],
-            & > [role="gridcell"][#{$prefix}width-auto="1"],
-            &[#{$prefix}width-auto="true"],
-            & > [role="gridcell"][#{$prefix}width-auto="true"] {
+            @include sf-make-centered-grid();
+        }
 
-                width: auto;
-                flex-grow: 1;
-            }
+        // EXPLICIT GRID AND CELL WIDTHS
+        // style="--sf-width: 30%;"
+        // style="--sf-tabp-width: 30%;"
+        &[style~="--#{$prefix}width:"],
+        & > [role="gridcell"][style~="--#{$prefix}width:"] {
+            
+            width: var(--#{$prefix}width);
+            flex-grow: 0;
+        }
 
-            // AUTO WIDTH CELLS
+        // EXPLICIT GRID AND CELL WIDTHS (FRACTIONS)
+        // style="--sf-frac: 3/12;"
+        // style="--sf-tabp-frac: 7/12;"
+        &[style~="--#{$prefix}frac:"],
+        & > [role="gridcell"][style~="--#{$prefix}frac:"] {
+            
+            width: calc((var(--#{$prefix}frac)) * 100%);
+            flex-grow: 0;
+        }
 
-            &[#{$prefix}width-auto="0"],
-            & > [role="gridcell"][#{$prefix}width-auto="0"],
-            &[#{$prefix}width-auto="false"],
-            & > [role="gridcell"][#{$prefix}width-auto="false"] {
+        // CELL PUSH
+        // style="--sf-push: 30%;"
+        // style="--sf-tabp-push: 30%;"
+        & > [role="gridcell"][style~="--#{$prefix}push:"] {
+            
+            left: var(--#{$prefix}push);
+        }
 
-                flex-grow: 0;
-            }
+        // CELL PUSH (FRACTIONS)
+        // style="--sf-push-frac: 2/12;"
+        // style="--sf-tabp-push-frac: 2/12;"
+        & > [role="gridcell"][style~="--#{$prefix}push-frac:"] {
+            
+            left: calc((var(--#{$prefix}push-frac)) * 100%);
+        }
+
+        // CELL PULL
+        // style="--sf-pull: 30%;"
+        // style="--sf-tabp-pull: 30%;"
+        & > [role="gridcell"][style~="--#{$prefix}pull:"] {
+            
+            right: var(--#{$prefix}pull);
+        }
+
+        // CELL PULL (FRACTIONS)
+        // style="--sf-pull-frac: 2/12;"
+        // style="--sf-tabp-pull-frac: 2/12;"
+        & > [role="gridcell"][style~="--#{$prefix}pull-frac:"] {
+            
+            right: calc((var(--#{$prefix}pull-frac)) * 100%);
+        }
+
+        // AUTO WIDTH CELLS
+
+        &[#{$prefix}width-auto],
+        & > [role="gridcell"][#{$prefix}width-auto],
+        &[#{$prefix}width-auto="1"],
+        & > [role="gridcell"][#{$prefix}width-auto="1"],
+        &[#{$prefix}width-auto="true"],
+        & > [role="gridcell"][#{$prefix}width-auto="true"] {
+
+            width: auto;
+            flex-grow: 1;
+        }
+
+        // AUTO WIDTH CELLS
+
+        &[#{$prefix}width-auto="0"],
+        & > [role="gridcell"][#{$prefix}width-auto="0"],
+        &[#{$prefix}width-auto="false"],
+        & > [role="gridcell"][#{$prefix}width-auto="false"] {
+
+            flex-grow: 0;
         }
     }
 }
@@ -434,7 +229,7 @@ body {
 
 // GRID DEFAULTS
 
-// <div role="grid" sf-tabp-cols="2" sf-tabp-reverse>
+// <div role="grid" sf-tabp-reverse>
 //     <div role="gridcell">...</div>
 //     <div role="gridcell">...</div>
 //     ...
@@ -442,9 +237,7 @@ body {
 
 [role="grid"] {
 
-    @include sf-flexbox-grid(
-        $gridcell-width: $base-column-count
-    );
+    @include sf-flexbox-grid();
 
     $prefix: "";
 
@@ -554,12 +347,12 @@ body {
 
         @include sf-media($upto: tablet-portrait) {
 
-            margin-right: $horizontal-unit-padding * -1;
+            margin-right: calc(var(--horizontal-unit-padding) * -1);
         }
 
         @include sf-media($from: phablet, $upto: tablet-portrait) {
 
-            margin-right: $phablet-horizontal-unit-padding * -1;
+            margin-right: calc(var(--phablet-horizontal-unit-padding) * -1);
         }
 
         overflow: scroll;
@@ -578,12 +371,12 @@ body {
 
             @include sf-media($upto: tablet-portrait) {
 
-                margin-right: $horizontal-unit-padding;
+                margin-right: var(--horizontal-unit-padding);
             }
     
             @include sf-media($from: phablet, $upto: tablet-portrait) {
     
-                margin-right: $phablet-horizontal-unit-padding;
+                margin-right: var(--phablet-horizontal-unit-padding);
             }
         }
     }
