--- a/styleguide/scss/custom/_typography.scss
+++ b/styleguide/scss/custom/_typography.scss
@@ -33,7 +33,7 @@ h1, h2, h3, h4, h5, h6 {
 
     em {
 
-        font-family: $font-head;
+        font-family: var(--font-head);
         font-weight: 300;
     }
 
